      direct XDMCP session was requested. Issue automatically found by GCC.
    - Makefile: qmake seems to act weird if QMAKE_C(XX)FLAGS starts with a
      space followed by additional non-whitespace characters. Refactor the
      variables a bit to work around this issue.
    - Makefile: turns out the only somewhat portable way to do something like
      this is via shell hackery.
  * x2goclient.spec:
    - Respect %{optflags} and pass QMAKE_STRIP=: to fix missing debug info
      issues.

  [ Oleksandr Shneyder ]
  * New upstream version (4.1.0.1):
    - Add "direct XDMCP" functionality.
    - Disable sound button on direct RDP and XDMCP sessions.
      Set for direct XDMCP session autologin=true.
      Set for direct XDMCP session username=XDM.
    - Interaction with SSH server (for example for changing
      expired password). Fixes: #592.
    - Fixing setting widget style issue in InteractionDialog on
      Windows client.
    - SSH Interaction for SSH Broker and SSH Server.
    - SSH Iteraction for method keyboard-interactive.
    - Move PulseManager MsgBox functions to main window:
      GUI functions should be used only from main thread.
    - Check "norecord" option on the first start of PulseAudio.
    - Disable/Enable PulseAudio in config dialog.
      New command line options:
      --disable-pulse to disable start of PulseAudio
      --disable-pulse-record to disable audio input.
    - Check if PulseAudio running at session start and resuming
      when sound is enabled. Show warning if PulseAudio not running
      and disable the sound support for the session to avoid
      session freezes.

  [ Robert Parts ]
  * New upstream version (4.1.0.1):
    - res/i18n/x2goclient_et.ts: update Estonian translation file.

  [ Martti Pitkänen ]
  * New upstream version (4.1.0.1):
    - res/i18n/x2goclient_fi.ts: update Finnish translation file.

  [ Mike DePaulo ]
  * New upstream version (4.1.0.1):
    - Windows: Upgrade PulseAudio from 6.0 to 7.1