@@ -173,6 +173,9 @@ x2goclient (4.1.0.1-0x2go1) UNRELEASED; urgency=medium
       variables a bit to work around this issue.
     - Makefile: turns out the only somewhat portable way to do something like
       this is via shell hackery.
+    - Makefile: reset to the original state and make sure that we don't pass
+      CXXFLAGS on to the actual build process to not override the values
+      generated by qmake.
   * x2goclient.spec:
     - Respect %{optflags} and pass QMAKE_STRIP=: to fix missing debug info
       issues.
